src/github.com/ebay/beam/query/parser/testdata/insert/errors/bad_fact_id.res
parser: unexpected type *parser.Entity as fact ID of fact 1